# auth-service/internal/features/auth/transport/http/transport.go
@@ -1,38 +1,0 @@
-package auth_transport_http
-
-import (
-	"context"
-	"net/http"
-
-	"github.com/Andryshazzz/go_pet/internal/core/domain"
-	core_http_server "github.com/Andryshazzz/go_pet/internal/core/transport/http/server"
-)
-
-type UsersHTTPHandler struct {
-	usersService UsersService
-}
-
-type UsersService interface {
-	CreateUser(
-		ctx context.Context,
-		user domain.User,
-	) (domain.User, error)
-}
-
-func NewUsersHTTPHandler(
-	usersService UsersService,
-) *UsersHTTPHandler {
-	return &UsersHTTPHandler{
-		usersService: usersService,
-	}
-}
-
-func (h *UsersHTTPHandler) Routes() []core_http_server.Route {
-	return []core_http_server.Route{
-		{
-			Method:  http.MethodPost,
-			Path:    "/users",
-			Handler: h.CreateUser,
-		},
-	}
-}
